tests/main_tests/ui/peel_ref_fn_lt_err.stderr
error: lifetime may not live long enough
 --> tests/main_tests/ui/peel_ref_fn_lt_err.rs:5:5
  |
4 | const fn foo<'a>(reff: &'a Wrapping<&'a u8>) -> &'a &'static u8 {
  |              -- lifetime `'a` defined here
5 |     peel_ref(reff)
  |     ^^^^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`

error: lifetime may not live long enough
 --> tests/main_tests/ui/peel_ref_fn_lt_err.rs:9:5
  |
8 | const fn bar<'a>(reff: &'a Wrapping<u8>) -> &'static u8 {
  |              -- lifetime `'a` defined here
9 |     peel_ref(reff)
  |     ^^^^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`
